Archive2/bb/4480bf9b9ed682/output
main.cpp:1:14: error: extra ';' [-Wpedantic]
 void foo() {};
              ^
